<?xml version="1.0" encoding="utf-8"?>
    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="16dp"
        android:paddingRight="16dp">

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="17dp"
            android:hint="@string/main_fixed"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:hint="@string/main_status"
            android:layout_below="@+id/textView5"
            android:layout_centerHorizontal="true" />

    <Button
        android:id="@+id/button3"
        android:layout_width="184dp"
        android:layout_height="200dp"
        android:layout_below="@+id/textView4"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:hint="@string/main_button"
        android:onClick="authenticateBtnClicked" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/button4"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="23dp"
        android:layout_toStartOf="@+id/button2"
        android:onClick="btnClicked1"
        android:text="Set Unlock Location" />

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/button"
        android:layout_alignParentEnd="true"
        android:layout_alignTop="@+id/button"
        android:layout_toEndOf="@+id/textView4"
        android:onClick="blacklistBtnClicked"
        android:text="Manage Blacklist"
        tools:onClick="sendMessage" />

    <Button
        android:id="@+id/button4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/button"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="17dp"
        android:layout_toStartOf="@+id/textView4"
        android:onClick="savedBtnClicked"
        android:text="@string/list_savedLocations" />

    <Button
        android:id="@+id/button6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/button4"
        android:layout_alignParentEnd="true"
        android:layout_alignStart="@+id/button2"
        android:layout_alignTop="@+id/button4"
        android:onClick="beginAppRestrictionBtnClicked"
        android:text="@string/main_begin_restriction"
        tools:text="@string/main_begin_restriction" />

    <Button
        android:id="@+id/button7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/button4"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="18dp"
        android:onClick="confirmBtnClicked"
        android:text="@string/Add_Geofence" />

    <Button
        android:id="@+id/button8"
        android:layout_width="98dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:onClick="overrideBtnClicked"
        android:text="@string/override_button" />

</RelativeLayout>
